fix: explore button on mobile

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -180,3 +180,7 @@ body {
 hr {
   background: $k-grey;
 }
+
+.section {
+  padding: 3rem 1.25rem;
+}
